# ml-algorithms

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/algorithm/regression/: linear_regression.cpp  linear_regression.h
src/test/: TestMatrix.cpp  main.cpp
src/util/math/: matrix.cpp  matrix.h
test/: TestMatrix.cpp
